# cmm

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  ai-driven-data-migrator.html  output.json  plan.md  pyproject.toml
cognitive-memory/: .env.example  ARCHITECTURE.md  README.md  pyproject.toml
cognitive-memory/data/memory_store/: chroma.sqlite3
cognitive-memory/fixtures/: FORMAT_NOTES.md
cognitive-memory/fixtures/claude_code/: session_lab03.jsonl  session_mcp_02.jsonl  session_mcp_03.jsonl
cognitive-memory/fixtures/synthetic/: architectural_refactor.jsonl
cognitive-memory/mcp_configs/: claude_code.json  claude_desktop.json
cognitive-memory/reports/: supply-chain_dag.md
cognitive-memory/scripts/: batch_consolidate.py  controlled_comparison.py  export_dag_md.py  ingest.py  install_skills.py  run_pipeline.py  visualize_dag.py
cognitive-memory/skills/: cognitive-profile.md  diagnose.md  search-memory.md
cognitive-memory/src/: cli.py
cognitive-memory/src/compression/: __init__.py  profile_builder.py
cognitive-memory/src/delivery/: __init__.py  __main__.py  cli_query.py
cognitive-memory/src/discovery/: hooks.py  llms_txt.py  project.py
cognitive-memory/src/evaluation/: __init__.py  analyzer.py  logger.py
cognitive-memory/src/extraction/: __init__.py  dag_builder.py
cognitive-memory/src/ingestion/: __init__.py  watcher.py
cognitive-memory/src/schemas/: __init__.py  memory.py  reasoning.py
cognitive-memory/tests/: conftest.py  test_discovery.py  test_evaluation.py  test_init_shared.py  test_schemas.py  test_store.py  test_watcher.py
(+60 files in other folders)
