[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognitive-memory"
version = "0.1.0"
description = "Persistent cross-platform cognitive memory for AI coding agents"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0.0",
    "chromadb>=0.5.0",
    "openai>=1.0.0",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "anyio>=4.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "watchdog>=4.0.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]
viz = [
    "graphviz>=0.20.0",
]

[project.scripts]
cmm = "src.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.metadata]
allow-direct-references = true
